--- a/app/src/main/res/layout/custom_listview_item.xml
+++ b/app/src/main/res/layout/custom_listview_item.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/imgv"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/item" />
 
     </LinearLayout>
@@ -30,7 +30,7 @@
         android:layout_toRightOf="@+id/llayout"
         android:text="Red Bull"
         android:textColor="#040404"
-        android:textSize="23dip"
+        android:textSize="20dip"
         android:textStyle="bold"
         android:typeface="sans" />
 
@@ -50,25 +50,25 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tx_company"
-        android:layout_marginTop="2dp"
+        android:gravity="bottom"
+        android:layout_alignBottom="@id/llayout"
         android:layout_marginRight="5dip"
         android:layout_toRightOf="@+id/llayout"
+        android:layout_marginBottom="0dp"
         android:indeterminate="false"
         android:max="100"
         android:minWidth="200dp"
-        android:minHeight="15dp"
+        android:minHeight="10dp"
         android:progress="50" />
 
     <TextView
         android:id="@+id/tx_expiring"
         android:layout_width="200dp"
-        android:layout_height="27dp"
-        android:layout_alignBottom="@+id/tx_company"
+        android:layout_height="26dp"
+        android:layout_above="@id/progressBar"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dip"
-        android:layout_marginBottom="0dp"
-        android:gravity="right"
+        android:gravity="right|bottom"
         android:text="expires in 10 days"
         android:textColor="#10bcc9"
         android:textSize="20dip"
