Updated ZXing Packages
and made it possible to rotate the scanner view thanks to https://github.com/journeyapps/zxing-android-embedded/issues/368#issuecomment-469307808

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -35,8 +35,12 @@
     <PreferenceCategory app:title="Scanning">
 
         <SwitchPreferenceCompat
-            app:key="camera"
+            app:key="whichCamera"
             app:title="Use front cam" />
+
+        <SwitchPreferenceCompat
+            app:key="orientCamera"
+            app:title="Unlock Orientation" />
 
     </PreferenceCategory>
 
@@ -48,9 +52,5 @@
             app:summary="Report technical issues or suggest new features"/>
 
     </PreferenceCategory>
-
-
-
-
 
 </androidx.preference.PreferenceScreen>
